# simple-fatfs

./: .cliffignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  cliff.toml
.github/workflows/: gen-changelog.yml  test.yml
imgs/: fat12.img  fat12.img.check  fat12.img.ck  fat16.img.check  fat16.img.ck  fat32.img.check  minfs.img  minfs.img.ck
src/: error.rs  fs.rs  io.rs  lib.rs  path.rs  time.rs
src/fat/: bpb.rs  direntry.rs  file.rs  fs.rs  mod.rs  storage.rs  tests.rs
src/fs/: bpb.rs  consts.rs  direntry.rs  file.rs  fs.rs  mod.rs  tests.rs
src/utils/: bincode.rs  bits.rs  io.rs  mod.rs  string.rs
tests/: I don't need a badge.txt  checksums.rs
tests/img_commons/: mod.rs
