[package]
name = "simple-fatfs"
version = "0.1.0-alpha.1"
edition = "2021"
description = "A simple-to-use FAT filesystem library for Rust (mainly targeted at embedded systems)"
license = "MIT"
repository = "https://github.com/Oakchris1955/simple-fatfs"
exclude = ["/.github", ".vscode", "/imgs", "**/*cliff*"]

[dependencies]
akin = "0.4.0"
bincode = "1.3.3"
bitfield-struct = "0.8.0"
bitflags = { version = "2.6.0", features = ["serde"] }
displaydoc = { version = "0.2.5", default-features = false }
log = "0.4.22"
serde = { version = "1.0.204", default-features = false, features = [ "alloc", "derive" ] }
serde-big-array = "0.5.1"
time = { version = "0.3.36", default-features = false, features = [ "alloc", "parsing", "macros", "local-offset" ]}
typed-path = { version = "0.10.0", default-features = false }

[features]
default = ["std"]
std = ["time/std", "time/local-offset"]

[dev-dependencies]
test-log = "0.2.16"
